# LB-Caverdock_clone

./: .gitignore  9rvrisyh2t_log.txt  AGENTS.md  Makefile  README.md  pyproject.toml  whole_clustering.csv
CD_results/: results.csv  results.json
CD_results/ligand/: analysis-lb.pdbqt  analysis-lb.txt  caverdock.config  caverdock.log.0  caverdock.log.1
configs/: caver_config_example.txt  caver_config_minimal.txt  example.yaml  linb_l177w.yaml  linb_wt.yaml
docs/: PROJECT_STATUS.txt  README.md  benchmark_linb.md
runs/linb_wt_cd_discs/: dock_disc_1.pdbqt  dock_disc_10.pdbqt  dock_disc_11.pdbqt  dock_disc_12.pdbqt  dock_disc_13.pdbqt  dock_disc_14.pdbqt  dock_disc_15.pdbqt  dock_disc_16.pdbqt  dock_disc_17.pdbqt  dock_disc_18.pdbqt  dock_disc_19.pdbqt  dock_disc_2.pdbqt  dock_disc_20.pdbqt  dock_disc_21.pdbqt  dock_disc_22.pdbqt  dock_disc_23.pdbqt  dock_disc_24.pdbqt  dock_disc_25.pdbqt  dock_disc_26.pdbqt  dock_disc_27.pdbqt  dock_disc_28.pdbqt  dock_disc_29.pdbqt  dock_disc_3.pdbqt  dock_disc_30.pdbqt  dock_disc_31.pdbqt  dock_disc_32.pdbqt  dock_disc_33.pdbqt  dock_disc_34.pdbqt  dock_disc_4.pdbqt  dock_disc_5.pdbqt  dock_disc_6.pdbqt  vina_profile.csv  (+3 more)
scripts/: benchmark_linb.sh  compare_vina_vs_cd_lb.py  export_cd_lb_csv.py  export_lb_merge_csv.py  export_tunnel_pdb.py  plot_lb_svg.py  plot_linb_comparison.py  profile_rmsd.py  run_caver.sh  run_example.sh  run_lb_on_cd_discs.py  run_wt_with_prepared_pdbqt.py  score_existing_poses_vina.py  tune_vina_com.py  tune_vina_params.py
tests/: conftest.py  test_caver_parse.py  test_pipeline_builder.py  test_vina_cmd.py
(+1983 files in other folders)
