[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caverdock-lowerbound"
version = "0.1.0"
description = "Recreate CaverDock-style lower-bound via Vina+AutoDockTools+CAVER3 with per-sphere parametrization."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.7",
  "ruff>=0.5.0",
  "build>=1.0",
]

[project.scripts]
caverdock-lb = "caverdock_lowerbound.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = []
